푸쉬 알림 환경설정 및 api 연동 : feat : 안드로이드 cicd 수정(google-services.json 파일위치수정) https://github.com/TEAM-ROMROM/RomRom-FE/issues/369

--- a/.github/workflows/ROMROM-ANDROID-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-CICD.yaml
@@ -58,12 +58,12 @@ jobs:
           echo "key.properties created"
           ls -la android/
 
-      # Google-services.json 생성
-      - name: Create Google-services.json
+      # google-services.json 생성
+      - name: Create google-services.json
         run: |
-          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" > android/Google-services.json
-          echo "Google-services.json created"
-          ls -la android/
+          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" > android/app/google-services.json
+          echo "google-services.json created"
+          ls -la android/app/
 
       # Flutter 설정 및 버전 확인
       - name: Set up Flutter
