푸쉬_알림_환경설정_및_api_연동 : feat : android-pr-cicd google-services.json 설정 단계 추가 https://github.com/TEAM-ROMROM/RomRom-FE/issues/369

--- a/.github/workflows/ROMROM-ANDROID-PR-BUILD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-PR-BUILD.yaml
@@ -90,6 +90,15 @@ jobs:
       - name: Android SDK 설정
         id: setup-android
         uses: android-actions/setup-android@v3
+      
+      - name: google-services.json 설정
+        shell: bash
+        run: |
+          mkdir -p android/app
+          # 시크릿의 줄바꿈을 그대로 보존해서 파일로 기록
+          printf '%s' "${GOOGLE_SERVICES_JSON}" > android/app/google-services.json
+        env:
+          GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
 
       - name: 코드 분석 실행
         run: |
