푸쉬_알림_환경설정_및_api_연동 : feat : ios 빌드 시 googleservice-info.plist 추가 https://github.com/TEAM-ROMROM/RomRom-FE/issues/369

--- a/.github/workflows/ROMROM-ANDROID-PLAYSTORE-CICD.yaml
+++ b/.github/workflows/ROMROM-ANDROID-PLAYSTORE-CICD.yaml
@@ -192,9 +192,12 @@ jobs:
 
       # google-services.json 생성
       - name: Create google-services.json
+        shell: bash
         run: |
-          echo "${{ secrets.GOOGLE_SERVICES_JSON }}" > android/app/google-services.json
-          echo "✅ google-services.json 생성 완료"
+          mkdir -p android/app
+          printf '%s' "${GOOGLE_SERVICES_JSON}" > android/app/google-services.json
+        env:
+          GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
