--- a/lib/icons/config.json
+++ b/lib/icons/config.json
@@ -119,20 +119,6 @@
       ]
     },
     {
-      "uid": "aab12ac34d786019442b42d61a477f36",
-      "css": "detailView",
-      "code": 59425,
-      "src": "custom_icons",
-      "selected": true,
-      "svg": {
-        "path": "M251.4 65.9C272.6 43.7 307.7 42.8 329.9 63.9L746.6 459.8C757.6 470.2 763.9 484.8 763.9 500 763.9 515.2 757.6 529.8 746.6 540.3L329.9 936.1C307.7 957.2 272.6 956.3 251.4 934.1 230.3 911.8 231.2 876.7 253.4 855.6L627.7 500 253.4 144.4C231.2 123.3 230.3 88.2 251.4 65.9Z",
-        "width": 1000
-      },
-      "search": [
-        "detailview"
-      ]
-    },
-    {
       "uid": "2cb9c9d260feb21c61ec94925afbface",
       "css": "dotsVertical",
       "code": 59426,
@@ -260,7 +246,7 @@
     },
     {
       "uid": "ca259d6577b57d9bc35255aad917b1ff",
-      "css": "arrow_upward",
+      "css": "arrowUpward",
       "code": 59411,
       "src": "custom_icons",
       "selected": true,
@@ -270,6 +256,20 @@
       },
       "search": [
         "arrow_upward"
+      ]
+    },
+    {
+      "uid": "aab12ac34d786019442b42d61a477f36",
+      "css": "detailView",
+      "code": 59425,
+      "src": "custom_icons",
+      "selected": true,
+      "svg": {
+        "path": "M251.4 65.9C272.6 43.7 307.7 42.8 329.9 63.9L746.6 459.8C757.6 470.2 763.9 484.8 763.9 500 763.9 515.2 757.6 529.8 746.6 540.3L329.9 936.1C307.7 957.2 272.6 956.3 251.4 934.1 230.3 911.8 231.2 876.7 253.4 855.6L627.7 500 253.4 144.4C231.2 123.3 230.3 88.2 251.4 65.9Z",
+        "width": 1000
+      },
+      "search": [
+        "detailview"
       ]
     },
     {
@@ -284,6 +284,20 @@
       },
       "search": [
         "warning"
+      ]
+    },
+    {
+      "uid": "eb85802a6428dc9a61f6a3d9639b80cb",
+      "css": "detailview",
+      "code": 59412,
+      "src": "custom_icons",
+      "selected": false,
+      "svg": {
+        "path": "M418.8 722.1C405.4 734.7 384.4 734.2 371.7 720.9 359 707.5 359.5 686.4 372.9 673.8L555.8 500 372.9 326.2C359.5 313.5 359 292.5 371.7 279.1 384.4 265.8 405.4 265.2 418.8 277.9L627.1 475.8C633.7 482.1 637.5 490.9 637.5 500 637.5 509.1 633.7 517.9 627.1 524.1L418.8 722.1Z",
+        "width": 1000
+      },
+      "search": [
+        "detailview"
       ]
     }
   ]
