홈화면 UI 수정 반영 및기존 카드 올라갔다 내려가는 카드 애니메이션 변경점 적용 필요 : feat : 물건 요청 전송에 대한 애니메이션 수정 및 성공 토스트창 표시 https://github.com/TEAM-ROMROM/RomRom-FE/issues/280

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,9 @@ app.*.map.json
 /android/app/.cxx/
 lib/generated/
 
+# Android keystore properties
+android/key.properties
+
 # 환경변수 ignore
 *.env
 
@@ -99,6 +102,10 @@ Flutter/flutter_assets/
 *.p12
 *.p8
 *.mobileprovision
+
+# Google Cloud 서비스 계정 키 파일
+*-*.json
+romrom-*.json
 
 # iOS/macOS 빌드 아티팩트
 ios/Flutter/AppFrameworkInfo.plist
