테스트용 브랜치별 앱 버전빌드 관리 전략 수립 : feat : 백틱으로 멀티라인 문자열 구현 https://github.com/TEAM-ROMROM/RomRom-FE/issues/388

--- a/.github/workflows/ROMROM-PR-BUILD-TRIGGER.yaml
+++ b/.github/workflows/ROMROM-PR-BUILD-TRIGGER.yaml
@@ -179,18 +179,20 @@ jobs:
             const prNumber = '${{ steps.pr_info.outputs.prNumber }}';
             const branchName = '${{ steps.pr_info.outputs.branchName }}';
 
-            await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: parseInt(prNumber),
-              body: `🚀 **앱 빌드 트리거 완료**
+            const body = `🚀 **앱 빌드 트리거 완료**
 
 Android와 iOS 빌드 워크플로우를 시작했습니다.
 
 - 빌드 번호: **#${prNumber}**
 - 브랜치: \`${branchName}\`
 
-⏳ 빌드가 완료되면 자동으로 결과 댓글이 작성됩니다.`
+⏳ 빌드가 완료되면 자동으로 결과 댓글이 작성됩니다.`;
+
+            await github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: parseInt(prNumber),
+              body: body
             });
 
             console.log('✅ 트리거 완료 댓글 작성 완료');
