테스트용 브랜치별 앱 버전빌드 관리 전략 수립 : feat : 빌드 번호 생성 로직 개선 {PR번호}{생성횟수 (2자리수)} https://github.com/TEAM-ROMROM/RomRom-FE/issues/388

--- a/.github/workflows/ROMROM-ANDROID-TEST-APK.yaml
+++ b/.github/workflows/ROMROM-ANDROID-TEST-APK.yaml
@@ -435,8 +435,7 @@ jobs:
 
             const body = `🤖 ✅ **Android 테스트 APK 빌드 완료**
 
-            - 앱 버전: \`0.0.0\`
-            - 빌드 번호: **#${buildNumber}**
+            - 앱 버전: \`0.0.0(${buildNumber})\`
             - 브랜치: \`${branchName}\`
             - 커밋: \`${commitHash}\`
 
@@ -467,7 +466,7 @@ jobs:
 
             const body = `🤖 ❌ **Android 테스트 APK 빌드 실패**
 
-            - 빌드 번호: **#${buildNumber}**
+            - 앱 버전: \`0.0.0(${buildNumber})\`
             - 브랜치: \`${branchName}\`
 
             ❌ 빌드 중 오류가 발생했습니다.
@@ -500,8 +499,7 @@ jobs:
 
             const body = `🤖 ✅ **Android 테스트 APK 빌드 완료**
 
-            - 앱 버전: \`0.0.0\`
-            - 빌드 번호: **#${buildNumber}**
+            - 앱 버전: \`0.0.0(${buildNumber})\`
             - 커밋: \`${commitHash}\`
 
             📦 **[아티팩트 다운로드](${artifactUrl})**`;
