--- a/.github/workflows/ROMROM-PR-BUILD-TRIGGER.yaml
+++ b/.github/workflows/ROMROM-PR-BUILD-TRIGGER.yaml
@@ -108,6 +108,39 @@ jobs:
           echo "PR에 댓글을 작성해주세요."
           exit 1
 
+      - name: PR별 빌드 횟수 조회 및 빌드 번호 생성
+        id: build_number_calc
+        if: steps.pr_info.outputs.isPR == 'true'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const prNumber = parseInt('${{ steps.pr_info.outputs.prNumber }}');
+
+            console.log(`📊 PR #${prNumber}의 빌드 횟수 조회 중...`);
+
+            // PR의 모든 댓글 조회
+            const comments = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: prNumber,
+              per_page: 100
+            });
+
+            // "앱 빌드 트리거 완료" 댓글 개수 = 이전 빌드 횟수
+            const buildCount = comments.data.filter(c =>
+              c.body.includes('앱 빌드 트리거 완료')
+            ).length;
+
+            // 빌드 번호: PR번호 + 2자리 카운트 (38300, 38301, 38302...)
+            const buildNumber = `${prNumber}${String(buildCount).padStart(2, '0')}`;
+
+            console.log(`📊 PR #${prNumber}: ${buildCount}번째 빌드 (이전 빌드 ${buildCount}회)`);
+            console.log(`📦 생성된 빌드 번호: ${buildNumber}`);
+
+            core.setOutput('buildCount', buildCount.toString());
+            core.setOutput('buildNumber', buildNumber);
+
       - name: Android 빌드 워크플로우 트리거
         if: steps.pr_info.outputs.isPR == 'true'
         uses: actions/github-script@v7
@@ -117,9 +150,11 @@ jobs:
             const prNumber = '${{ steps.pr_info.outputs.prNumber }}';
             const branchName = '${{ steps.pr_info.outputs.branchName }}';
             const issueNumber = '${{ steps.pr_info.outputs.issueNumber }}';
+            const buildNumber = '${{ steps.build_number_calc.outputs.buildNumber }}';
 
             console.log(`🚀 Android 빌드 워크플로우 트리거 시작...`);
             console.log(`   PR 번호: #${prNumber}`);
+            console.log(`   빌드 번호: ${buildNumber}`);
             console.log(`   브랜치: ${branchName}`);
             console.log(`   이슈 번호: ${issueNumber || '없음'}`);
 
@@ -129,7 +164,7 @@ jobs:
               event_type: 'build-android-app',
               client_payload: {
                 pr_number: prNumber,
-                build_number: prNumber,
+                build_number: buildNumber,
                 branch_name: branchName,
                 issue_number: issueNumber || '',
                 triggered_by: 'pr-comment',
@@ -148,9 +183,11 @@ jobs:
             const prNumber = '${{ steps.pr_info.outputs.prNumber }}';
             const branchName = '${{ steps.pr_info.outputs.branchName }}';
             const issueNumber = '${{ steps.pr_info.outputs.issueNumber }}';
+            const buildNumber = '${{ steps.build_number_calc.outputs.buildNumber }}';
 
             console.log(`🚀 iOS 빌드 워크플로우 트리거 시작...`);
             console.log(`   PR 번호: #${prNumber}`);
+            console.log(`   빌드 번호: ${buildNumber}`);
             console.log(`   브랜치: ${branchName}`);
             console.log(`   이슈 번호: ${issueNumber || '없음'}`);
 
@@ -160,7 +197,7 @@ jobs:
               event_type: 'build-ios-app',
               client_payload: {
                 pr_number: prNumber,
-                build_number: prNumber,
+                build_number: buildNumber,
                 branch_name: branchName,
                 issue_number: issueNumber || '',
                 triggered_by: 'pr-comment',
@@ -178,13 +215,17 @@ jobs:
           script: |
             const prNumber = '${{ steps.pr_info.outputs.prNumber }}';
             const branchName = '${{ steps.pr_info.outputs.branchName }}';
+            const buildNumber = '${{ steps.build_number_calc.outputs.buildNumber }}';
+            const buildCount = '${{ steps.build_number_calc.outputs.buildCount }}';
 
             const body = `🚀 **앱 빌드 트리거 완료**
 
             Android와 iOS 빌드 워크플로우를 시작했습니다.
-            
-            - 빌드 번호: **#${prNumber}**
+
+            - 앱 버전: \`0.0.0(${buildNumber})\`
+            - PR: **#${prNumber}** (${buildCount}번째 빌드)
             - 브랜치: \`${branchName}\`
+
             ⏳ 빌드가 완료되면 자동으로 결과 댓글이 작성됩니다.`;
 
             await github.rest.issues.createComment({
