--- a/.github/workflows/ROMROM-PR-BUILD-TRIGGER.yaml
+++ b/.github/workflows/ROMROM-PR-BUILD-TRIGGER.yaml
@@ -1,18 +1,19 @@
 # ===================================================================
-# PR 댓글을 통한 앱 빌드 트리거 워크플로우
+# PR/이슈 댓글을 통한 앱 빌드 트리거 워크플로우
 # ===================================================================
 #
-# 이 워크플로우는 PR에 댓글로 "@suh-lab build app"을 작성하면
+# 이 워크플로우는 PR 또는 이슈에 댓글로 "@suh-lab build app"을 작성하면
 # Android와 iOS 앱 빌드를 자동으로 트리거합니다.
 #
 # 주요 특징:
-# - PR 댓글 감지: "@suh-lab build app" 키워드 감지
+# - PR/이슈 댓글 감지: "@suh-lab build app" 키워드 감지
 # - repository_dispatch 이벤트로 빌드 워크플로우 트리거
-# - PR 번호를 빌드 번호로 사용
+# - PR/이슈 번호 + 빌드 횟수로 고유한 빌드 번호 생성
 # - 브랜치명에서 이슈 번호 자동 추출
 #
 # 사용 방법:
-# PR에 댓글 작성: "@suh-lab build app"
+# - PR에 댓글 작성: "@suh-lab build app"
+# - 이슈에 댓글 작성: "@suh-lab build app" (Guide by SUH-LAB 댓글 필요)
 #
 # ===================================================================
 
@@ -44,25 +45,30 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const commentId = context.payload.comment.id;
-            
+
             await github.rest.reactions.createForIssueComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               comment_id: commentId,
               content: 'eyes'
             });
-            
+
             console.log('👀 댓글에 확인 리액션 추가 완료');
 
-      - name: PR 정보 확인 및 추출
-        id: pr_info
+      - name: PR/이슈 정보 확인 및 추출
+        id: source_info
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
             const issueNumber = context.payload.issue.number;
+            let sourceType = '';
+            let sourceNumber = '';
+            let branchName = '';
+            let headSha = '';
+            let relatedIssueNumber = '';
 
-            // PR인지 확인
+            // 1. 먼저 PR인지 확인
             try {
               const pr = await github.rest.pulls.get({
                 owner: context.repo.owner,
@@ -70,60 +76,127 @@ jobs:
                 pull_number: issueNumber
               });
 
-              const branchName = pr.data.head.ref;
-              const prNumber = pr.data.number;
-              const headSha = pr.data.head.sha;
+              sourceType = 'PR';
+              sourceNumber = pr.data.number.toString();
+              branchName = pr.data.head.ref;
+              headSha = pr.data.head.sha;
 
-              console.log(`✅ PR 확인: #${prNumber}`);
+              console.log(`✅ PR 확인: #${sourceNumber}`);
               console.log(`🌿 브랜치명: ${branchName}`);
               console.log(`📝 커밋 해시: ${headSha}`);
 
               // 브랜치명에서 이슈 번호 추출 (#280 형식)
               const issueMatch = branchName.match(/#(\d+)/);
-              const extractedIssueNumber = issueMatch ? issueMatch[1] : '';
+              relatedIssueNumber = issueMatch ? issueMatch[1] : '';
 
-              if (extractedIssueNumber) {
-                console.log(`📌 추출된 이슈 번호: #${extractedIssueNumber}`);
-              } else {
-                console.log('⚠️ 브랜치명에서 이슈 번호를 찾을 수 없습니다.');
+              if (relatedIssueNumber) {
+                console.log(`📌 추출된 이슈 번호: #${relatedIssueNumber}`);
               }
 
-              // core.setOutput으로 개별 값 설정
-              core.setOutput('isPR', 'true');
-              core.setOutput('prNumber', prNumber.toString());
-              core.setOutput('branchName', branchName);
-              core.setOutput('headSha', headSha);
-              core.setOutput('issueNumber', extractedIssueNumber);
-
             } catch (error) {
-              console.log('❌ PR이 아닙니다 또는 PR을 찾을 수 없습니다.');
-              console.log('에러:', error.message);
-              core.setOutput('isPR', 'false');
+              console.log('ℹ️ PR이 아닙니다. 이슈에서 브랜치 정보를 찾습니다...');
+
+              // 2. PR이 아니면 이슈에서 "Guide by SUH-LAB" 댓글 찾기
+              sourceType = 'ISSUE';
+              sourceNumber = issueNumber.toString();
+              relatedIssueNumber = issueNumber.toString();
+
+              try {
+                const comments = await github.rest.issues.listComments({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  issue_number: issueNumber,
+                  per_page: 100
+                });
+
+                // "Guide by SUH-LAB" 댓글 찾기
+                const guideComment = comments.data.find(c =>
+                  c.body.includes('Guide by SUH-LAB')
+                );
+
+                if (!guideComment) {
+                  console.log('❌ "Guide by SUH-LAB" 댓글을 찾을 수 없습니다.');
+                  core.setOutput('found', 'false');
+                  core.setOutput('errorMessage', '이슈에서 "Guide by SUH-LAB" 댓글을 찾을 수 없습니다. 브랜치 정보가 포함된 댓글이 필요합니다.');
+                  return;
+                }
+
+                console.log('✅ "Guide by SUH-LAB" 댓글 발견');
+
+                // 브랜치명 추출 (### 브랜치 다음 ``` 블록 내용)
+                const branchMatch = guideComment.body.match(/### 브랜치\s*```\s*([\s\S]*?)\s*```/);
+
+                if (!branchMatch) {
+                  console.log('❌ 브랜치 정보를 파싱할 수 없습니다.');
+                  core.setOutput('found', 'false');
+                  core.setOutput('errorMessage', '"Guide by SUH-LAB" 댓글에서 브랜치 정보를 파싱할 수 없습니다. 댓글 형식을 확인해주세요.');
+                  return;
+                }
+
+                branchName = branchMatch[1].trim();
+                console.log(`🌿 추출된 브랜치명: ${branchName}`);
+                console.log(`✅ 이슈 #${sourceNumber}에서 빌드 정보 추출 완료`);
+
+              } catch (commentError) {
+                console.log('❌ 이슈 댓글 조회 중 오류 발생:', commentError.message);
+                core.setOutput('found', 'false');
+                core.setOutput('errorMessage', `이슈 댓글 조회 중 오류가 발생했습니다: ${commentError.message}`);
+                return;
+              }
             }
 
-      - name: PR이 아닌 경우 종료
-        if: steps.pr_info.outputs.isPR != 'true'
-        run: |
-          echo "⚠️ 이 댓글은 PR이 아닌 이슈에 작성되었습니다."
-          echo "PR에 댓글을 작성해주세요."
-          exit 1
+            // 결과 출력
+            core.setOutput('found', 'true');
+            core.setOutput('sourceType', sourceType);
+            core.setOutput('sourceNumber', sourceNumber);
+            core.setOutput('branchName', branchName);
+            core.setOutput('headSha', headSha);
+            core.setOutput('relatedIssueNumber', relatedIssueNumber);
 
-      - name: PR별 빌드 횟수 조회 및 빌드 번호 생성
-        id: build_number_calc
-        if: steps.pr_info.outputs.isPR == 'true'
+      - name: 브랜치 정보를 찾을 수 없는 경우 에러 댓글 작성
+        if: steps.source_info.outputs.found != 'true'
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const prNumber = parseInt('${{ steps.pr_info.outputs.prNumber }}');
+            const issueNumber = context.payload.issue.number;
+            const errorMessage = '${{ steps.source_info.outputs.errorMessage }}';
 
-            console.log(`📊 PR #${prNumber}의 빌드 횟수 조회 중...`);
+            const body = `❌ **앱 빌드 트리거 실패**
 
-            // PR의 모든 댓글 조회
+            ${errorMessage}
+
+            **해결 방법:**
+            - PR에서 빌드하는 경우: PR 페이지에서 댓글을 작성해주세요.
+            - 이슈에서 빌드하는 경우: "Guide by SUH-LAB" 댓글이 있어야 합니다.
+              - 댓글에 \`### 브랜치\` 섹션과 브랜치명이 포함되어 있어야 합니다.`;
+
+            await github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: issueNumber,
+              body: body
+            });
+
+            core.setFailed(errorMessage);
+
+      - name: 빌드 횟수 조회 및 빌드 번호 생성
+        id: build_number_calc
+        if: steps.source_info.outputs.found == 'true'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const sourceNumber = parseInt('${{ steps.source_info.outputs.sourceNumber }}');
+            const sourceType = '${{ steps.source_info.outputs.sourceType }}';
+
+            console.log(`📊 ${sourceType} #${sourceNumber}의 빌드 횟수 조회 중...`);
+
+            // PR/이슈의 모든 댓글 조회
             const comments = await github.rest.issues.listComments({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: prNumber,
+              issue_number: sourceNumber,
               per_page: 100
             });
 
@@ -132,89 +205,94 @@ jobs:
               c.body.includes('앱 빌드 트리거 완료')
             ).length;
 
-            // 빌드 번호: PR번호 + 2자리 카운트 (38300, 38301, 38302...)
-            const buildNumber = `${prNumber}${String(buildCount).padStart(2, '0')}`;
+            // 빌드 번호: 소스번호 + 2자리 카운트 (38800, 38801, 38802...)
+            const buildNumber = `${sourceNumber}${String(buildCount).padStart(2, '0')}`;
 
-            console.log(`📊 PR #${prNumber}: ${buildCount}번째 빌드 (이전 빌드 ${buildCount}회)`);
+            console.log(`📊 ${sourceType} #${sourceNumber}: ${buildCount}번째 빌드 (이전 빌드 ${buildCount}회)`);
             console.log(`📦 생성된 빌드 번호: ${buildNumber}`);
 
             core.setOutput('buildCount', buildCount.toString());
             core.setOutput('buildNumber', buildNumber);
 
       - name: Android 빌드 워크플로우 트리거
-        if: steps.pr_info.outputs.isPR == 'true'
+        if: steps.source_info.outputs.found == 'true'
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const prNumber = '${{ steps.pr_info.outputs.prNumber }}';
-            const branchName = '${{ steps.pr_info.outputs.branchName }}';
-            const issueNumber = '${{ steps.pr_info.outputs.issueNumber }}';
+            const sourceType = '${{ steps.source_info.outputs.sourceType }}';
+            const sourceNumber = '${{ steps.source_info.outputs.sourceNumber }}';
+            const branchName = '${{ steps.source_info.outputs.branchName }}';
+            const relatedIssueNumber = '${{ steps.source_info.outputs.relatedIssueNumber }}';
             const buildNumber = '${{ steps.build_number_calc.outputs.buildNumber }}';
 
             console.log(`🚀 Android 빌드 워크플로우 트리거 시작...`);
-            console.log(`   PR 번호: #${prNumber}`);
+            console.log(`   ${sourceType} 번호: #${sourceNumber}`);
             console.log(`   빌드 번호: ${buildNumber}`);
             console.log(`   브랜치: ${branchName}`);
-            console.log(`   이슈 번호: ${issueNumber || '없음'}`);
+            console.log(`   관련 이슈 번호: ${relatedIssueNumber || '없음'}`);
 
             await github.rest.repos.createDispatchEvent({
               owner: context.repo.owner,
               repo: context.repo.repo,
               event_type: 'build-android-app',
               client_payload: {
-                pr_number: prNumber,
+                pr_number: sourceNumber,
                 build_number: buildNumber,
                 branch_name: branchName,
-                issue_number: issueNumber || '',
-                triggered_by: 'pr-comment',
-                comment_id: context.payload.comment.id.toString()
+                issue_number: relatedIssueNumber || '',
+                triggered_by: `${sourceType.toLowerCase()}-comment`,
+                comment_id: context.payload.comment.id.toString(),
+                source_type: sourceType
               }
             });
 
             console.log('✅ Android 빌드 워크플로우 트리거 완료');
 
       - name: iOS 빌드 워크플로우 트리거
-        if: steps.pr_info.outputs.isPR == 'true'
+        if: steps.source_info.outputs.found == 'true'
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const prNumber = '${{ steps.pr_info.outputs.prNumber }}';
-            const branchName = '${{ steps.pr_info.outputs.branchName }}';
-            const issueNumber = '${{ steps.pr_info.outputs.issueNumber }}';
+            const sourceType = '${{ steps.source_info.outputs.sourceType }}';
+            const sourceNumber = '${{ steps.source_info.outputs.sourceNumber }}';
+            const branchName = '${{ steps.source_info.outputs.branchName }}';
+            const relatedIssueNumber = '${{ steps.source_info.outputs.relatedIssueNumber }}';
             const buildNumber = '${{ steps.build_number_calc.outputs.buildNumber }}';
 
             console.log(`🚀 iOS 빌드 워크플로우 트리거 시작...`);
-            console.log(`   PR 번호: #${prNumber}`);
+            console.log(`   ${sourceType} 번호: #${sourceNumber}`);
             console.log(`   빌드 번호: ${buildNumber}`);
             console.log(`   브랜치: ${branchName}`);
-            console.log(`   이슈 번호: ${issueNumber || '없음'}`);
+            console.log(`   관련 이슈 번호: ${relatedIssueNumber || '없음'}`);
 
             await github.rest.repos.createDispatchEvent({
               owner: context.repo.owner,
               repo: context.repo.repo,
               event_type: 'build-ios-app',
               client_payload: {
-                pr_number: prNumber,
+                pr_number: sourceNumber,
                 build_number: buildNumber,
                 branch_name: branchName,
-                issue_number: issueNumber || '',
-                triggered_by: 'pr-comment',
-                comment_id: context.payload.comment.id.toString()
+                issue_number: relatedIssueNumber || '',
+                triggered_by: `${sourceType.toLowerCase()}-comment`,
+                comment_id: context.payload.comment.id.toString(),
+                source_type: sourceType
               }
             });
 
             console.log('✅ iOS 빌드 워크플로우 트리거 완료');
 
       - name: 트리거 완료 댓글 작성
-        if: steps.pr_info.outputs.isPR == 'true'
+        if: steps.source_info.outputs.found == 'true'
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const prNumber = '${{ steps.pr_info.outputs.prNumber }}';
-            const branchName = '${{ steps.pr_info.outputs.branchName }}';
+            const sourceType = '${{ steps.source_info.outputs.sourceType }}';
+            const sourceNumber = '${{ steps.source_info.outputs.sourceNumber }}';
+            const branchName = '${{ steps.source_info.outputs.branchName }}';
             const buildNumber = '${{ steps.build_number_calc.outputs.buildNumber }}';
             const buildCount = '${{ steps.build_number_calc.outputs.buildCount }}';
 
@@ -223,7 +301,7 @@ jobs:
             Android와 iOS 빌드 워크플로우를 시작했습니다.
 
             - 앱 버전: \`0.0.0(${buildNumber})\`
-            - PR: **#${prNumber}** (${buildCount}번째 빌드)
+            - PR/ISSUE: **#${sourceNumber}** (${buildCount}번째 빌드)
             - 브랜치: \`${branchName}\`
 
             ⏳ 빌드가 완료되면 자동으로 결과 댓글이 작성됩니다.`;
@@ -231,7 +309,7 @@ jobs:
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: parseInt(prNumber),
+              issue_number: parseInt(sourceNumber),
               body: body
             });
 
